# hikaxpro

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/: consts.py  hikaxpro.py
src/errors/: errors.py
src/helpers/: sha256.py  xmlBuilder.py
src/models/: DeviceBase.py  MagneticContact.py  PassiveInfraredDetector.py  SessionLogin.py  SessionLoginCap.py
tests/: test_hikaxpro.py  test_xmlBuilder.py
