[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hikaxpro"
version = "1.0.4"
description = "Hikvision AX Pro alarm kit ISAPI integration for home assistant alarm panel"
readme = "README.md"
authors = [{ name = "Günkut Zeybek", email = "gunkut.zeybek@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hikvision", "ISAPI", "homeassistant"]
dependencies = [
    "numpy >= 1.22.3",
    "requests"    
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "requests_mock"]

[tool.bumpver]
current_version = "1.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

