[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hikaxpro"
version = "1.3.0"
description = "Hikvision AX Pro alarm kit ISAPI integration for home assistant alarm panel"
readme = "README.md"
authors = [{ name = "Günkut Zeybek", email = "gunkut.zeybek@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hikvision", "ISAPI", "homeassistant"]
dependencies = [
    "requests"    
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "requests_mock"]

[tool.bumpver]
current_version = "1.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

